# python-hugo

./: README.md  app.py  pyproject.toml  reqiurements.txt
content/posts/flask/: index.md
content/posts/homelab/: index.md
static/: style.css
templates/: index.html  post.html
