[project]
name = "python-hugo"
version = "0.1.0"
description = "Simple MD to HTML website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mistune==3.2.0",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.3",
    "werkzeug==3.1.5",
]
